<resources>
    <string name="app_name">Fruit Share</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="label_password">Password:</string>
    <string name="label_login">Login ID:</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_act_test_home">Test Home</string>
    <string name="more">More</string>
    <string name="large_text">PPPPPPPPPPPPPPPPLASPALPLAPLSAPSLAPSLAPSLPASLAPSLAPSLaSAPSlalalalalalalalalalalalasdasdasdadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
        aaaaaaaaaaaaaaaaaaaaaaaaaaasssssssssssalalaS</string>
    <string name="location">Location</string>
    <string name="photo">Photo</string>
    <string name="status">Status</string>
    <string name="title_activity_settings">Settings</string>
    <string name="upload">Upload</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="loading">Loading</string>
    <string name="select_picture">Select Picture</string>
    <string name="uploading">Uploading</string>
    <string name="empty"/>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="label_content">Content:</string>
    <string name="label_title">Title:</string>
    <string name="success">Success</string>
    <string name="upload_success">Upload Success</string>
    <string name="title_activity_loading">LoadingAct</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="confirm">Comfirm</string>
    <string name="confirm_to_delete">Confirm to delete?</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="clear">Clear</string>
    <string name="refresh">Refresh</string>
    <string name="license">License</string>
    <string name="author_info">Author Info</string>
    <string name="feedback">Feedback</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="author_email_desc">Author Email</string>
    <string name="version">Version</string>
    <string name="cache">Cache</string>
    <string name="glide_cache">Glide Cache</string>
    <string name="okhttp_cache">Okhttp Cache</string>
    <string name="clear_cache_desc">Cache size: %1$d MB</string>
    <string name="feedback_desc">Help me make App better</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_desc" translatable="false">https://github.com/wingsum93/coupleShareApp/graphs/contributors</string>
</resources>
